# django-dsl

./: .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
django_dsl/: compiler.py  dsl.py  exceptions.py  fields.py  lexer.py  parser.py  parsetab.py  validators.py
django_dsl/locale/pl/LC_MESSAGES/: django.mo  django.po
tests/: settings.py  test_dsl.py
